@@ -11,7 +11,7 @@
 
 	<groupId>uk.ac.warwick.tabula</groupId>
 	<artifactId>tabula-project</artifactId>
-	<version>33</version>
+	<version>34</version>
 	<packaging>pom</packaging>
 
 	<name>Tabula</name>
@@ -382,7 +382,7 @@
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.1.3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -405,27 +405,37 @@
 	<build>
 		<defaultGoal>install</defaultGoal>
 
-		<sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
-		<testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
-
 		<plugins>
+
 			<!-- Scala support in maven -->
-			<plugin>
+			 <plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>scala-compile-first</id>
+						<phase>process-resources</phase>
 						<goals>
+							<goal>add-source</goal>
 							<goal>compile</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>scala-test-compile</id>
+						<phase>process-test-resources</phase>
+						<goals>
 							<goal>testCompile</goal>
 						</goals>
 					</execution>
 				</executions>
 				<configuration>
 					<checkMultipleScalaVersions>false</checkMultipleScalaVersions>
+					<!-- <recompileMode>incremental</recompileMode> -->
+					<!-- <useZincServer>true</useZincServer> -->
 					<jvmArgs>
 						<jvmArg>-Xms256m</jvmArg>
 						<jvmArg>-Xmx2048m</jvmArg>
+						<jvmArg>-XX:MaxPermSize=256m</jvmArg>
 					</jvmArgs>
 					<args>
 						<arg>-deprecation</arg>
@@ -433,6 +443,25 @@
 					</args>
 				</configuration>
 			</plugin>
+
+			<!-- Java -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin> 
+
 
 			<!-- Scalastyle for build verification -->
 			<plugin>
@@ -503,7 +532,7 @@
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>scala-maven-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.1.3</version>
 				</plugin>
 
 				<plugin>
@@ -511,9 +540,13 @@
 					<artifactId>scalastyle-maven-plugin</artifactId>
 					<version>0.2.0</version>
 					<configuration>
+						<!-- TAB-697 -->
+						<skip>true</skip>
+						
 						<verbose>false</verbose>
 						<failOnViolation>true</failOnViolation>
 						<failOnWarning>false</failOnWarning>
+            <includeTestSourceDirectory>false</includeTestSourceDirectory>
 						<sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
 						<testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
 						<configLocation>${tabula.basedir}/config/scalastyle_config.xml</configLocation>
@@ -599,9 +632,10 @@
 											scala-maven-plugin
 										</artifactId>
 										<versionRange>
-											[3.1.0,)
+											[3.1.3,)
 										</versionRange>
 										<goals>
+											<goal>add-source</goal>
 											<goal>compile</goal>
 											<goal>testCompile</goal>
 										</goals>
